--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@
 # Verify this with: http://lint.travis-ci.org/
 language: ruby
 # Delete dependency locks for matrix builds.
-before_install: rm Gemfile.lock || true
+before_install:
+- rm Gemfile.lock || true
+- gem install rubygems-update -v2.2.2
 script: bundle exec rake test
 rvm:
   - 1.8.7
